--- a/src/main/resources/chatroom.html
+++ b/src/main/resources/chatroom.html
@@ -2,75 +2,52 @@
 <html lang="en">
 <head>
     <title>Chat Room</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-        #chat-container {
-            width: 400px;
-            margin: 20px auto;
-            border: 1px solid #ccc;
-            padding: 10px;
-            height: 300px;
-            overflow-y: scroll;
-            background-color: white;
-        }
-        #message-input {
-            width: 70%;
-            padding: 10px;
-            border: none;
-            border-bottom: 1px solid #ccc;
-            outline: none;
-            font-size: 14px;
-        }
-        #send-button {
-            padding: 10px;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        #send-button:hover {
-            background-color: #2980b9;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="chat-container"></div>
-<div style="display: flex;">
-    <input type="text" id="message-input" placeholder="Type your message...">
-    <button id="send-button">Send</button>
+<div id="chat-app">
+    <div id="main-content">
+        <div id="sidebar">
+            <h2>Chat Rooms</h2>
+            <ul id="chat-room-list">
+                <li>General Chat</li>
+                <li>Technical Discussion</li>
+                <!-- Add more chat rooms here -->
+            </ul>
+        </div>
+        <div id="chat-container"></div>
+    </div>
+    <div id="message-bar">
+        <input type="text" id="message-input" placeholder="Type your message...">
+        <button id="send-button">Send</button>
+    </div>
 </div>
 
 <script>
-    const messageInput = document.getElementById( "message-input" );
-    const sendButton = document.getElementById( "send-button" );
-    const outputElement = document.getElementById( "chat-container" )
-    const userSessionToken = localStorage.getItem( "userSessionToken" )
-    const ws = new WebSocket( `ws://localhost:8080/ws?token=${ userSessionToken }`);
+    const messageInput = document.getElementById("message-input");
+    const sendButton = document.getElementById("send-button");
+    const outputElement = document.getElementById("chat-container");
+    const userSessionToken = localStorage.getItem("userSessionToken");
+    const ws = new WebSocket(`ws://localhost:8080/ws?token=${userSessionToken}`);
 
     ws.onopen = () => {
-        console.log( "WebSocket connection opened" );
+        console.log("WebSocket connection opened");
     }
 
-    sendButton.addEventListener( "click", () => {
+    sendButton.addEventListener("click", () => {
         const message = messageInput.value;
-        outputMessage = messageInput.innerText
-        ws.send( message );
-        outputElement.innerHTML += `<p>${ outputMessage }</p>`;
+        ws.send(message);
+        outputElement.innerHTML += `<p>${message}</p>`;
         messageInput.value = '';
     })
 
-    ws.onmessage = ( event ) => {
+    ws.onmessage = (event) => {
         const message = event.data;
-        outputElement.innerHTML += `<p>${ message }</p>`;
+        outputElement.innerHTML += `<p>${message}</p>`;
     }
 
     ws.onclose = () => {
-        console.log( "WebSocket connection closed" );
+        console.log("WebSocket connection closed");
     }
 </script>
 </body>
