--- a/src/main/resources/registrationForm.html
+++ b/src/main/resources/registrationForm.html
@@ -2,59 +2,20 @@
 <html lang="en">
 <head>
     <title>User Registration</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-        .registration-form {
-            width: 300px;
-            margin: 100px auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-            font-size: 14px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #e74c3c;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 3px;
-        }
-        button:hover {
-            background-color: #c0392b;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-<div class="registration-form">
-    <h1>User Registration</h1>
-    <form method="post" action="/register">
-        <label for="username">Username:</label>
-        <input type="text" name="username" required>
-        <label for="email">Email:</label>
-        <input type="email" name="email" required>
-        <label for="password">Password:</label>
-        <input type="password" name="password" required>
-        <button type="submit">Register</button>
-    </form>
-</div>
-</body>
+    <body>
+    <div class="registration-form">
+        <h1>User Registration</h1>
+        <form method="post" action="/register">
+            <label for="username">Username:</label>
+            <input type="text" name="username" required>
+            <label for="email">Email:</label>
+            <input type="email" name="email" required>
+            <label for="password">Password:</label>
+            <input type="password" name="password" required>
+            <button type="submit">Register</button>
+        </form>
+    </div>
+    </body>
 </html>
