--- a/src/main/resources/registrationForm.html
+++ b/src/main/resources/registrationForm.html
@@ -2,21 +2,67 @@
 <html lang="en">
 <head>
     <title>User Registration</title>
-    <link rel="stylesheet" href="styles.css">
+    <!--<link rel="stylesheet" href="styles.css">-->
 
 </head>
 <body>
-    <div class="registration-form">
+    <!--<div class="registration-form">
         <h1>User Registration</h1>
-        <form method="post" action="/register">
+        <form>
             <label for="username">Username:</label>
-            <input type="text" name="username" required>
+            <input type="text" id="username" name="username" required>
             <label for="email">Email:</label>
-            <input type="email" name="email" required>
+            <input type="email" id="email" name="email" required>
             <label for="password">Password:</label>
-            <input type="password" name="password" required>
+            <input type="password" id="password" name="password" required>
             <button type="submit">Register</button>
         </form>
+    </div>-->
+
+    <div class="authentication-form">
+        <h1>User Authentication</h1>
+        <form action="/register" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Login</button>
+        </form>
     </div>
+
+    <script>
+        const form = document.querySelector( "form" );
+        form.addEventListener( "submit", async ( event ) => {
+            event.preventDefault();
+
+            const username = document.getElementById( "username" ).value;
+            const password = document.getElementById( "password" ).value;
+
+            try {
+                const response = await fetch( "/register", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/x-www-form-urlencoded"
+                    },
+                    body: `username=${ username }&password=${ password }`
+                });
+
+                const responseData = await response.json();
+                const userSessionToken = responseData.token;
+
+                console.log( userSessionToken )
+
+                // Store the token in localStorage for later use
+                localStorage.setItem( "userSessionToken", userSessionToken );
+
+                // Redirect to the chatroom or another page
+                window.location.href = "/chatroom";
+            } catch ( error ) {
+                console.error( "Registration error:", error );
+            }
+        });
+    </script>
 </body>
 </html>
