--- a/src/main/resources/userAuthentication.html
+++ b/src/main/resources/userAuthentication.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>User Authentication</title>
-        <link rel="stylesheet" href="styles.css">
+        <!--<link rel="stylesheet" href="styles.css">-->
 
     </head>
     <body>
