Only chat rooms relevant to the user will be available to click and join

--- a/src/main/resources/chatroom.html
+++ b/src/main/resources/chatroom.html
@@ -121,7 +121,7 @@
     }
 
     function fetchChatRooms() {
-        fetch( 'http://localhost:8080/chatroom/rooms' )
+        fetch( `http://localhost:8080/chatroom/rooms?token=${ userSessionToken }` )
             .then( response => response.json() )
             .then( data => {
                 populateChatRoomList( data )
